@@ -25,10 +25,10 @@
 package com.silverpeas.util;
 
 import com.stratelia.silverpeas.silvertrace.SilverTrace;
-import java.io.UnsupportedEncodingException;
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.lang3.CharEncoding;
 import org.apache.commons.lang3.StringEscapeUtils;
+import org.silverpeas.util.Charsets;
+
+import javax.xml.bind.DatatypeConverter;
 
 /**
  * Util class to encode special string or characters
@@ -197,15 +197,11 @@ public class EncodeHelper {
    * @return the filename to be inserted in the content-disposition header.
    */
   public static String encodeFilename(String filename) {
-    try {
       StringBuilder buffer = new StringBuilder(256);
       buffer.append("=?UTF-8?B?");
-      buffer.append(new String(Base64.encodeBase64(filename.getBytes(CharEncoding.UTF_8))));
+      buffer.append(DatatypeConverter.printBase64Binary(filename.getBytes(Charsets.UTF_8)));
       buffer.append("?=");
       return buffer.toString();
-    } catch (UnsupportedEncodingException ex) {
-      return filename;
-    }
   }
 
   private EncodeHelper() {
